--- a/src/pages/Basket.module.css
+++ b/src/pages/Basket.module.css
@@ -30,8 +30,8 @@
     align-items: center;
     img{
         width: 100%;
-        height: 60%;
-        overflow: hidden;
+        height: 50%;
+        object-fit: contain;
     }
     span{
         color: red;
@@ -48,3 +48,20 @@
     border: none;
     border-radius: 5px;
 }
+.counter {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
+}
+  
+  .counter button {
+    padding: 4px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    background-color: rgb(5, 88, 60);
+    color: azure;
+}
+   
+  
